RecyclerView automatically scrolls down when logs are added